correction contraste color filtre

--- a/assets/style.css
+++ b/assets/style.css
@@ -99,7 +99,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	/*color: #fff;*/
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -114,6 +114,7 @@ body {
 .nav-pills .nav-link {
 	color: #000
 }
+
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
